--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ djangorestframework-simplejwt==4.7.2
 gunicorn==20.1.0
 oauthlib==3.2.2
 Pillow==8.2.0
+psycopg2==2.9.6
 PyJWT==2.7.0
 python3-openid==3.2.0
 pytz==2023.3
